header spacing css fix

--- a/src/assets/styles/global/_page_header.scss
+++ b/src/assets/styles/global/_page_header.scss
@@ -7,7 +7,7 @@ $background: 'background.webp';
     @include flex-column();
     @include span-100();
     @include flex-center();
-    padding: 7rem 0 3rem 0;
+    padding: 10rem 0 3rem 0;
     @include background-image-config($background, 100%, $no-repeat: true);
 
 
